# Fate-Wielding-Bot

./: .gitignore  LICENSE  README.md  keep_alive.py  main.py  pyproject.toml  requirements.txt
cogs/: developer.py  games.py  randomizers.py  topGG.py  troll.py
controllers/: controller.py
exceptions/: defaultExceptions.py  voiceChatExceptions.py
ffmpeg/doc/: ffmpeg-all.html  ffmpeg-filters.html  ffmpeg.html  ffplay-all.html  ffprobe-all.html
ffmpeg/include/libavutil/: ffversion.h
models/: commands.py  leaderBoard.json  models.py
sounds/crys/: silvanaCry.m4a
