[tool.poetry]
name = "fate-wielding-bot"
version = "0.1.0"
description = "A discord bot, more to come"
authors = ["sdrrv"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
flask = "^1.1.2"
ffmpeg = "^1.4"
PyNaCl = "^1.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
