[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool]
[tool.poetry]
authors = ["Your Name <you@example.com>"]
description = ""
name = "python-template"
version = "0.1.0"
[tool.poetry.dependencies]
Flask = "^2.0.3"
"discord.py" = "^1.7.3"
python = "^3.8"
dblpy = "^0.4.0"
waitress = "^2.0.0"
ffmpeg = "^1.4"
gTTS = "^2.2.3"
PyNaCl = "^1.5.0"
[tool.poetry.dev-dependencies]
